thought the scan lines were a little big ugly so i fixed the spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -39,8 +39,8 @@ textarea,
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(transparent 50%, rgba(0, 0, 0, 0.6) 50%);
-  background-size: 100% 3px;
+  background: linear-gradient(transparent 60%, rgba(0, 0, 0, 0.6) 60%);
+  background-size: 100% 4px;
   pointer-events: none !important;
   z-index: 10005;
 }
